# latticetm

./: .gitignore  README.md  configure.ac  ctc_test.sh  decode_giza  grid_search  plain_best_paths  run  run_giza  scaling_test  test  valgrindtest  wer
data/: english.txt  german.lat
data/phoneme-prototyping/: english.txt  german.lat
src/latticelm/: Makefile.am  data-lattice.cc  data-lattice.h  lat1finalstate  lat1finalstate.cc  latsample.cc  latticelm.cc  latticelm.h  lexical-tm.cc  lexical-tm.h  pylm-fst.h  pylm.h  sampgen.cc  sampgen.h  symbol-set.h
src/scripts/: create_callhome_all.jl  debug.py  loggraph.jl  plf2txt.py  results2latex.py  scaling2coords.py  visualize.jl
